# particulate-matter-report

./: .gitignore  Makefile  README.md  index.html  pm25_data.db  pyproject.toml  run.py  search.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test_and_deploy_workflow.yaml
docs/: particulate_matter_report.html  search.js  src.html
docs/particulate_matter_report/: particulate_matter_report.html
docs/src/: particulate_matter_report.html
particulate_matter_report/: particulate_matter_report.html  particulate_matter_report.py
src/: __init__.py  particulate_matter_report.html  particulate_matter_report.py
tests/: test_particulate_matter_report.py
utils/: install-poetry.sh
